# active-annotate

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  Makefile  Pipfile  README.md  alembic.ini  diagram_klas.drawio.html  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json.example  pyrightconfig.json.template  requirements.txt
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml  docs.yml
active_annotate/: conftest.py
active_annotate/config/: api_router.py  celery_app.py  urls.py  wsgi.py
active_annotate/config/settings/: base.py  local.py  production.py  test.py
active_annotate/datasets/: admin.py  apps.py  models.py  urls.py
active_annotate/datasets/api/: serializers.py  views.py
active_annotate/datasets/migrations/: 0001_initial.py  0002_alter_classificationdatapoint_dataset_and_more.py  0003_classificationdataset_label_studio_api_key_and_more.py  0004_classificationdataset_batch_size.py  0005_classificationprediction_model_version.py  0006_classificationdataset_uncertainty_strategy.py  0007_classificationdataset_epoch_and_more.py  0008_alter_classificationdataset_state.py
active_annotate/integrations/: admin.py  apps.py  label_studio_schemas.py  models.py  services.py  tasks.py  urls.py
active_annotate/integrations/api/: serializers.py  views.py
active_annotate/integrations/migrations/: 0001_initial.py  (+2 more)
active_annotate/templates/: base.html
active_annotate/users/: adapters.py  apps.py  models.py  views.py
alembic/: env.py
alembic/versions/: 5e4efe4579d8_add_project_table.py
app/: __init__.py  enums.py  main.py  utils.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/crud/: active_learning_client.py  annotation_tool_client.py  project.py  storage.py
app/db/: __init__.py  database.py
app/models/: __init__.py  active_learning_client.py  annotation_tool_client.py  mapping.py  ml_backend.py  project.py  storage.py
app/schemas/: active_learning.py  active_learning_client.py  annotation_tool_client.py  ml_backend.py  project.py  storage.py
app/services/: __init__.py  active_learning_client.py  annotation_service.py  annotation_tool_client.py  dataset_converter.py  label_studio.py  ml_backend.py  project.py  project_service.py  storage.py  storage_service.py
docs/: api.rst  conf.py  development.rst  docker.md  documentation.rst  github-pages-setup.md  howto.rst  index.rst  installation.rst  local-storage-integration.md  make.bat  ml-backend-integration.md  projects_organization_and_infrastructure_pl.md  testing.rst  users.rst
ml_backend/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  main.py  model.py  model_manager.py  pyproject.toml  requirements.txt
ml_backend/example/: Dockerfile  app.py  model.py  schema.py
scripts/: entrypoint-dev.sh  entrypoint.sh  init-db.sql
tests/: __init__.py  conftest.py  test_health.py  test_ml_backend.py  test_project.py  test_projects.py
(+39 files in other folders)
